new version features, resolved vulnerability in proxy

--- a/telnet_proxy/.vscode/tasks.json
+++ b/telnet_proxy/.vscode/tasks.json
@@ -8,6 +8,14 @@
             "promptOnClose": false,
             "isBackground": false,
             "problemMatcher": ["$tsc"]
+        },
+        {
+            "type": "npm",
+            "label": "webpack proxy",
+            "script": "webpack",
+            "promptOnClose": false,
+            "isBackground": false,
+            "problemMatcher": ["$tsc"]
         }
     ]
 }
