--- a/browser/package.json
+++ b/browser/package.json
@@ -46,7 +46,7 @@
     "@types/qunit": "^2.11.3",
     "@types/socket.io-client": "^1.4.36",
     "aes-js": "^3.1.2",
-    "axios": "^0.19.2",
+    "axios": "^0.26.0",
     "codemirror": "^5.65.1",
     "css-element-queries": "^1.2.3",
     "del": "^6.0.0",
@@ -54,6 +54,7 @@
     "jquery": "^3.6.0",
     "jqwidgets-framework": "^9.1.6",
     "lz-string": "^1.4.4",
+    "markdown-it": "^12.3.2",
     "moxios": "^0.4.0",
     "ngraph.graph": "^20.0.0",
     "ngraph.path": "^1.4.0",
@@ -73,17 +74,17 @@
     "@types/node": "^17.0.16",
     "@types/resize-observer-browser": "^0.1.7",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^6.0.0",
     "cross-var": "^1.1.0",
-    "electron": "^9.4.4",
+    "electron": "^17.0.1",
     "electron-builder": "^22.9.1",
     "electron-reload": "^1.5.0",
     "fs-extra": "^2.1.2",
-    "html-webpack-plugin": "^4.5.2",
+    "html-webpack-plugin": "^5.0.4",
     "typescript": "^3.9.10",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.3"
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "build": {
     "productName": "ts2-client",
