--- a/browser/package.json
+++ b/browser/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "postinstall": "node tools/postinstall.js && npm run electronpostinstall",
-    "electronpostinstall": "electron-builder install-app-deps",
+    "electronpostinstall": "echo electron-builder install-app-deps",
     "compile": "tsc -p tsconfig.json",
     "webpack": "webpack",
     "build": "node tools/genAppInfo.js \"git rev-parse HEAD\" && node tools/generateHtmlHashes.js && tsc --sourceMap false -p tsconfig.json && webpack && node tools/build.js",
@@ -81,13 +81,13 @@
     "@types/resize-observer-browser": "^0.1.7",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.0",
-    "cross-var": "^1.1.0",
     "fs-extra": "^2.1.2",
     "html-webpack-plugin": "^5.0.4",
     "typescript": "^4.1.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "json5": "^2.2.3"
   },
   "build": {
     "productName": "ts2-client",
