--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -1,6 +1,6 @@
 attrs==19.3.0
 blinker==1.4
-certifi==2020.4.5.1
+certifi==>=2022.12.07
 chardet==3.0.4
 click==7.1.2
 coverage==5.1
@@ -20,7 +20,7 @@ MarkupSafe==1.1.1
 more-itertools==8.3.0
 packaging==20.4
 pluggy==0.13.1
-py==1.10.0
+py==1.11.1
 pyparsing==2.4.7
 pytest==7.2.0
 pytest-mock==3.1.1
